# ifdo-py

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
ifdo/: __init__.py  dto.py  model.py  models.py  serializable.py
ifdo/models/: __init__.py  ifdo.py  ifdo_capture.py  ifdo_content.py  ifdo_core.py
tests/: ifdo-video-example.json  test_load.py  test_save.py
