[tool.poetry]
name = "ifdo"
version = "1.1.3"
description = "iFDO utilities"
authors = [
    "Kevin Barnard <kbarnard@mbari.org>",
    "Chris Jackett <chris.jackett@csiro.au>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stringcase = "^1.2.0"
pyyaml = "^6.0"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
